<resources>
    <string name="app_name">Converter</string>
    <string name="title_choose_convertion">Choose what you want to convert:</string>
    <string name="currency_converter">CURRENCY CONVERTER</string>
    <string name="enter_value">Enter value</string>
    <string name="convert">Convert</string>
    <string name="reslut">RESULT:</string>
    <string name="temperature_converter">TEMPERATURE CONVERTER</string>
    <string name="length_converter">LENGTH CONVERTER</string>
    <string name="weight_converter">WEIGHT CONVERTER</string>
    <string-array name="currency_units">
        <item>HRK->EUR</item>
        <item>EUR->HRK</item>
    </string-array>
    <string-array name="temperature_units">
        <item>Celsius->Kelvin</item>
        <item>Kelvin->Celsius</item>
    </string-array>7
    <string-array name="length_units">
        <item>Inch->Centimeter</item>
        <item>Centimeter->Inch</item>
    </string-array>
    <string-array name="weight_units">
        <item>Kilogram->Pound</item>
        <item>Pound->Kilogram</item>
    </string-array>
</resources>
